# nsflow

./: .env.example  .gitignore  .pylintrc  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  cli.py  hello.py  makefile  pyproject.toml  pytest.ini  requirements-build.txt  requirements-dev.txt  requirements-private.txt  requirements.txt  run.py  sample_tree.txt
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml  tests.yml
backend/: main.py
backend/api/: agents_diagram_builder.py  router.py
backend/api/v1/: agent_flows.py  fast_websocket.py
build_scripts/: Dockerfile  build_frontend.sh  build_wheel.sh  codefresh.yml  copyright_config.json
coded_tools/airline_policy/: extract_docs.py  extract_pdf.py  url_provider.py  webpage_reader.py
coded_tools/ds_smart_home/: shapi_kitchenlights.py  shapi_lrlamp.py  shapi_radio.py  shapi_tv.py
coded_tools/smart_home_onf/: kitchen_lights_switch.py  lights_switch.py  living_room_lights_switch.py  tv_switch.py
coded_tools/supply_chain/: vendor_db_tool.py
coded_tools/website_search/: website_search.py
docs/: MCP_OAUTH.md  VQA_README.md  observability-plugin-proposal.md  update_0.6.md
frontend/: package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentFlow.tsx  AgentNode.tsx  ChatPanel.tsx  ConfigsPanel.tsx  CustomEdge.tsx  FloatingEdge.tsx  Header.tsx  LogsPanel.tsx  Sidebar.tsx
frontend/src/context/: ApiPortContext.tsx
frontend/src/utils/: utils.ts
generated_notebooks/: airline_policy.ipynb
knowdocs/baggage/checked/: baggage for infants.txt
knowdocs/baggage/special-items/: Electronic Device.txt  Traveling with pets.txt  Traveling with sports equipment.txt
knowdocs/flight/mileage-plus/: Join MileagePlus and Earn Miles.txt
knowdocs/flight/military-personnel/: Military Benefits and Discounts.txt
knowdocs/international/: International Travel Documents.txt  US Travel Documents.txt  international entry and departure restrictions.txt
nsflow/: __init__.py  run.py
nsflow/backend/: main.py
nsflow/backend/api/: proxy.py  router.py
nsflow/backend/api/v1/: agent_flows.py  andeditor.py  app_configs.py  audio_endpoints.py  cruse_endpoints.py  editor_endpoints.py  export_endpoints.py  export_notebook.py  fast_concierge.py  fast_streaming_chat.py  fast_websocket.py  fastapi_concierge_endpoints.py  fastapi_grpc_endpoints.py  mcp_oauth_endpoints.py  oneshot_endpoints.py  pdf_endpoints.py  trace_history.py  version_info.py  vqa_endpoints.py
nsflow/backend/db/: database.py  models.py  schemas.py  trace_event_writer.py
nsflow/backend/models/: andeditor_models.py  chat_request_model.py  config_model.py  editor_models.py
nsflow/backend/trust/: rai_service.py  sustainability_calculator.py
nsflow/backend/utils/: agent_log_processor.py  agent_network_utils.py  async_streaming_input_processor.py  auth_utils.py  notebook_generator.py  notebook_utils.py  ns_concierge_utils.py  ns_config_store.py  ns_configs_registry.py  ns_grpc_base_utils.py  ns_grpc_concierge_utils.py  ns_grpc_network_utils.py  ns_grpc_service.py  ns_grpc_service_api.py  ns_grpc_service_utils.py  ns_grpc_streaming_chat_utils.py  ns_grpc_websocket_utils.py  ns_grpc_ws_utils.py  version.py  websocket_logs_manager.py  websocket_logs_registry.py
nsflow/backend/utils/agentutils/: agent_log_processor.py  agent_network_utils.py  async_streaming_input_processor.py  network_schema_cache.py  ns_concierge_utils.py  ns_grpc_network_utils.py  ns_grpc_ws_utils.py  ns_network_utils.py  ns_websocket_utils.py
nsflow/backend/utils/editor/: hocon_reader.py  ops_store.py  simple_state_manager.py  simple_state_registry.py  state_manager.py  state_registry.py  toolbox_service.py
nsflow/backend/utils/logutils/: logging_setup.py  process_log_bridge.py  websocket_logs_manager.py  websocket_logs_registry.py
nsflow/backend/utils/mcp/: __init__.py  mcp_http.py  mcp_oauth_manager.py  mcp_refresh_provider.py  mcp_token_storage.py
nsflow/backend/utils/obsutils/: nsflow_obs_utils.py
nsflow/backend/utils/tools/: auth_utils.py  notebook_generator.py  notebook_utils.py  ns_config.py  ns_configs_registry.py
nsflow/frontend/: .env.development  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
nsflow/frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
nsflow/frontend/src/app/: App.tsx  routes.tsx
nsflow/frontend/src/components/: AgentContextMenu.tsx  AgentFlow.tsx  AgentNode.tsx  AttachmentsPreview.tsx  ChatPanel.tsx  ConfigPanel.tsx  CustomEdge.tsx  EditableAgentNode.tsx  EditorAgentFlow.tsx  EditorLogsPanel.tsx  EditorPalette.tsx  EditorSidebar.tsx  EditorSlyDataPanel.tsx  FileViewerDialog.tsx  FloatingEdge.tsx  Header.tsx  InfoPanel.tsx  InternalChatPanel.tsx  LogsPanel.tsx  MuiThemeToggle.tsx  NetworkAgentEditorPanel.tsx  ScrollableMessageContainer.tsx  Sidebar.tsx  SlyDataPanel.tsx  StarStudioPopup.tsx  SustainabilityScore.tsx  TabbedChatPanel.tsx  ThemeToggle.tsx  ZenModeAgentFlow.tsx  ZenModeChat.tsx  ZenModeOverlay.tsx  ZenModeSettings.tsx
nsflow/frontend/src/config/: zenModeConfig.ts
nsflow/frontend/src/context/: ApiPortContext.tsx  ChatContext.tsx  NeuroSanContext.tsx  zenModeTypes.ts  (+5 more)
registries/: agent_network_generator.hocon  airbnb.hocon  airline_policy.hocon  banking_ops.hocon  cloud_services.hocon  ds_smart_home.hocon  gtc.hocon  hello_world.hocon  insurance_agents.hocon  intranet_agents.hocon  manifest.hocon  opportunity_finder_pipeline.hocon  python_coach.hocon  retail_ops_and_customer_service.hocon  smart_home_onf.hocon  supply_chain.hocon  telco_network_support.hocon  website_search.hocon
scripts/: gen_large_network.py
tests/: test_andeditor.py
tests/fixtures/: openapi.json
tests/nsflow/: test_agent_network.py  test_mcp_oauth_endpoints.py  test_mcp_pkce_verifier.py  test_mcp_refresh_provider.py  test_ns_websocket_mcp.py  test_ops_store.py  test_st_agent_flows.py  test_version.py  testtest.py
(+109 files in other folders)
