# These bits are assembled from (largely) following the guidance here:
# https://packaging.python.org/en/latest/overview/

[build-system]
requires = ["setuptools>=61.0", "wheel","setuptools-scm==8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nsflow"
description = "A Neuro-San powered Smart Agent Network Framework"
keywords = ["NsFlow", "NeuroSan", "agent-network"]
license-files = ["LICENSE"]

# Please use a simple string containing a SPDX expression for `project.license`. You can also use `project.license-files`. (Both options available on setuptools>=77.0.0).
# By 2026-Feb-18, you need to update your project and remove deprecated calls
# or your builds will no longer be supported.
# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license for details.
        
# license = { file = "LICENSE" }
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "Deepak" }
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",

    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",

    # We still need to classify our academic license
    # "License :: XXX :: XXX"
]

dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
# Specify the dependencies for the library from what is given in requirements.txt
dependencies = {file = ["requirements.txt"]}

optional-dependencies = {dev = {file = ["requirements-private.txt"]}}

[project.scripts]
nsflow = "nsflow.run:main"  # App entry point

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Standard setup has source existing under /src directory.
# That's not what we tend to do.
# Ours is more of what is called a "flat-layout", so be explicit about that.
where = ["."]
# namespaces = false
# Note: package_data is not useful here for packaging up non-python files.
#       See MANIFEST.in instead.
exclude = ["tests*", "nsflow/frontend*", "coded_tools*", "registries*",
 "generated_notebooks*", "knowdocs*", "logs*", "wheels_private*"]

[tool.setuptools_scm]
fallback_version = "0.0.1"

[project.urls]
Homepage = "https://github.com/leaf-ai/nsflow"
Repository = "https://github.com/leaf-ai/nsflow"

