# These bits are assembled from (largely) following the guidance here:
# https://packaging.python.org/en/latest/overview/

[build-system]
requires = ["setuptools>=61.0", "wheel","setuptools-scm==8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nsflow"
description = "A Neuro-San powered Smart Agent Network Framework"
keywords = ["NsFlow", "NeuroSan", "agent-network"]
# This license name comes from doc recommendation here
# https://packaging.python.org/en/latest/guides/licensing-examples-and-user-scenarios/
license = "Apache-2.0"
license-files = ["LICENSE.txt"]
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Deepak" }
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",

    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",
]

dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
# Specify the dependencies for the library from what is given in requirements.txt
dependencies = {file = ["requirements.txt"]}

[project.scripts]
nsflow = "nsflow.run:main"  # App entry point

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# Standard setup has source existing under /src directory.
# That's not what we tend to do.
# Ours is more of what is called a "flat-layout", so be explicit about that.
where = ["."]
# namespaces = false
# Note: package_data is not useful here for packaging up non-python files.
#       See MANIFEST.in instead.
exclude = ["tests*", "nsflow/frontend*", "coded_tools*", "registries*",
 "generated_notebooks*", "knowdocs*", "logs*", "wheels_private*"]

[tool.setuptools_scm]
fallback_version = "0.0.1"

[tool.ruff]
# Global line length (aligned with pylint).
line-length = 119
indent-width = 4
# Match requires-python (>=3.10).
target-version = "py310"
src = ["nsflow", "tests"]
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".*checkpoint\\.py",
    "^venv/.*$",
    "^.*/\\.venv/.*$",
]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors (e.g. indentation, whitespace, line length)
    "F",  # Pyflakes checks (e.g. undefined names, unused imports, unused variables)
    "I",  # isort import-ordering rules
    "W",  # pycodestyle warnings (e.g. trailing whitespace, blank lines)
]
ignore = ["E203"]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["nsflow", "tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pylint]
max-line-length = 119
# Based on Google Python Style Guide
disable = [
    "C0301",  # Line too long (handled by ruff)
    "C0114",  # Missing module docstring (missing-module-docstring)
    "C0115",  # Missing class docstring (missing-class-docstring)
    "W0718",  # broad-exception-caught
    # This repo contains examples that should remain independent, so we expect some level of copy/paste
    "R0801",  # Similar lines in 2 files
    "W0511",  # TODO/FIXME comments
    ]
good-names = ["i", "j", "k", "ex", "_", "id", "f", "db", "e"]
ignore-patterns = [".*checkpoint\\.py"]
ignore-paths = ["^venv/.*$", "^.*/\\.venv/.*$"]
# Google style requires docstrings
enable = [
    "useless-suppression",
]
# Google style naming conventions
const-naming-style = "UPPER_CASE"
function-naming-style = "snake_case"
class-naming-style = "PascalCase"
method-naming-style = "snake_case"
attr-naming-style = "snake_case"
argument-naming-style = "snake_case"
variable-naming-style = "snake_case"
inlinevar-naming-style = "snake_case"
# Additional settings
fail-under = 10.0
output-format = "colorized"
init-import = false


[project.urls]
Homepage = "https://github.com/cognizant-ai-lab/nsflow"
Repository = "https://github.com/cognizant-ai-lab/nsflow"
Documentation = "https://github.com/cognizant-ai-lab/nsflow#readme"
# If we move issue tracking to github 
# Issues = "https://github.com/cognizant-ai-lab/nsflow/issues"
